# mcwr

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
modpacks/: Cargo.toml
modpacks/src/: lib.rs  main.rs  mrpack.rs  tests.rs
src/: cline.rs  config.rs  errors.rs  interactive.rs  main.rs  mconf.rs  mcwr.default.conf  modpack.rs  mtmp.rs  mvers.rs  tests.rs
translateutil/: Cargo.toml  README.md
translateutil/src/: lib.rs
translations/: en.toml  es.toml
