[package]
name = "mcwr"
version = "0.1.7"
edition = "2021"
authors = ["k3nder"]
license = "GPL-3.0-only"
description = "A MC WRAPPER CREATOR"

[dependencies]
mclr = "3.0.0"
clap = { version = "4.5.28", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
modpacks = { path = "./modpacks", optional = true }

[features]
default = ["modpack"]
modpack = ["modpacks"]
