[package]
name = "mcwr"
version = "0.1.7"
edition = "2021"
authors = ["k3nder"]
license = "GPL-3.0-only"
description = "A MC WRAPPER CREATOR"

[dependencies]
mclr = "3.0.0"
clap = { version = "4.5.28", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
## INTERACTIVE DEPENDENCIES
console = { version = "0.15.11", optional = true }
dialoguer = { version = "0.11.0", optional = true, features = ["fuzzy-select"] }
indicatif = { version = "0.17.11", optional = true }

[features]
default = ["interactive"]
#default = ["modpack"]
#modpack = ["modpacks"]
interactive = ["console", "indicatif", "dialoguer"]
