[package]
name = "mcwr"
version = "0.2.3"
edition = "2021"
authors = ["k3nder"]
license = "GPL-3.0-only"
description = "A MC WRAPPER CREATOR"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
mcd = "0.3.0"
anyhow = "1.0.98"
dwldutil = "2.0.2"
## INTERACTIVE DEPENDENCIES
console = { version = "0.15.11", optional = true }
dialoguer = { version = "0.11.0", optional = true, features = ["fuzzy-select"] }
indicatif = { version = "0.17.11", optional = true }
translateutil = { version = "0.1.0", optional = true }
## EXPORT DEPENDENCIES
tar = { version = "0.4.44", optional = true }
flate2 = { version = "1.1.1", optional = true }

[features]
default = ["interactive", "export"]
#default = ["modpack"]
#modpack = ["modpacks"]
interactive = ["console", "indicatif", "dialoguer", "translateutil"]
en = []
es = ["translateutil/es"]
export = ["dep:tar", "dep:flate2"]
