[package]
name = "modpacks"
version = "0.1.0"
edition = "2021"
authors = ["k3nder"]
license = "GPL-3.0-only"
description = "A modpacks downloader for MCWR"


[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha1 = { version = "0.11.0-pre.5" }
sha2 = { version = "0.11.0-pre.5" }
log = "0.4.17"
env_logger = "0.10.0"
dwldutil = "1.1.0"
# parallel download
smol = "2.0.2"
surf = "2.3.2"
hex = "0.4.3"
indicatif = "0.17.0"
futures = "0.3.25"

[features]
mrpack = []
