[package]
name = "translateutil"
version = "0.1.0"
edition = "2021"
authors = ["k3nder"]
description = "Macro for translate applications"
license = "MIT"

[lib]
proc-macro = true # Esta línea es crucial

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.8.20"
serde = { version = "1.0.152", features = ["derive"] }

[features]
default = ["en"]
en = []
es = []
fr = []
ru = []
